@@ -1,5 +1,10 @@
 2003-01-17  John Levon  <levon@movementarian.org>
 
+	* HACKING:
+	* doc/CodingStyle: add
+
+2003-01-17  John Levon  <levon@movementarian.org>
+
 	* TODO: some updates
 
 2003-01-15  Philippe Elie  <phil.el@wanadoo.fr>
